mobile map styles z-index fixed

--- a/resources/styles/pages/home/layouts/filter.scss
+++ b/resources/styles/pages/home/layouts/filter.scss
@@ -40,6 +40,7 @@
         top: 7rem;
         opacity: 1;
         pointer-events: all;
+        z-index: 1;
       }
     }
   }
